test/files/pos/t4775/Test.scala
class Test {
  import JavaClass._
  foo(new Element, classOf[Element], false)
}
