test/files/neg/macro-invalidsig-params-namemismatch/Test_2.scala
object Test extends App {
  import Macros._
  foo(42, 100)
}